<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginView">

    <TextView
        android:text="@string/reset_your_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/back_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>