<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Welcome">

    <TextView
        android:id="@+id/welcome_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_planetze"
        android:textColor="@android:color/black"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/login_btn1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/register_btn1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_register"
        tools:ignore="TextSizeCheck" />

</LinearLayout>