<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/suggestedActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_x"
        android:textColor="@android:color/holo_green_light"
        android:textSize="16sp"
        android:layout_gravity="center_vertical" />

    <TextView
        android:text="@string/replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/currentActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_y"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"
        android:layout_gravity="center_vertical" />
</LinearLayout>
